src/test/ui/conditional-compilation/cfg-attr-cfg-2.stderr
error[E0601]: `main` function not found in crate `cfg_attr_cfg_2`
  --> $DIR/cfg-attr-cfg-2.rs:8:1
   |
LL | #[cfg_attr(foo, cfg(bar))]
   | ^
   |
help: define a function named `main` at the crate root
   |
LL | fn main() {}
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0601`.
